--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,8 @@ rust-version = "1.60"
 [dependencies]
 anyhow = "1.0.28"
 chrono = "0.4"
-clap = { version = "3.0", features = ["cargo"] }
-clap_complete = "3.0"
+clap = { version = "4.0.29", features = ["cargo", "wrap_help"] }
+clap_complete = "4.0.6"
 once_cell = "1"
 env_logger = "0.10.0"
 handlebars = "4.0"
