--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,9 +20,9 @@ anyhow = "1.0.28"
 chrono = "0.4"
 clap = { version = "3.0", features = ["cargo"] }
 clap_complete = "3.0"
+once_cell = "1"
 env_logger = "0.9.0"
 handlebars = "4.0"
-lazy_static = "1.0"
 log = "0.4"
 memchr = "2.0"
 opener = "0.5"
@@ -49,7 +49,7 @@ elasticlunr-rs = { version = "3.0.0", optional = true }
 ammonia = { version = "3", optional = true }
 
 [dev-dependencies]
-assert_cmd = "1"
+assert_cmd = "2"
 predicates = "2"
 select = "0.5"
 semver = "1.0"
