Add draft chapters with children to test book

--- a/test_book/book.toml
+++ b/test_book/book.toml
@@ -9,6 +9,7 @@ edition = "2018"
 
 [output.html]
 mathjax-support = true
+fold = { enable = true, level = 1 }
 
 [output.html.playground]
 editable = true
