Run tests in examples in the CI workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,8 @@ jobs:
       run: bash ci/install-rust.sh ${{ matrix.rust }}
     - name: Build and run tests
       run: cargo test
+    - name: Test examples
+      run: cargo test --examples
     - name: Test no default
       run: cargo test --no-default-features
 
