Use config rather than a dedicated command to run example tests
This allows users to also run example tests with a single `cargo test`
command.

Co-authored-by: Eric Huss <eric@huss.org>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,3 +65,7 @@ search = ["elasticlunr-rs", "ammonia"]
 [[bin]]
 doc = false
 name = "mdbook"
+
+[[example]]
+name = "nop-preprocessor"
+test = true
