--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,11 +20,12 @@ anyhow = "1.0.28"
 chrono = "0.4"
 clap = { version = "3.0", features = ["cargo"] }
 clap_complete = "3.0"
-once_cell = "1"
 env_logger = "0.9.0"
+ignore = "0.4"
 handlebars = "4.0"
 log = "0.4"
 memchr = "2.0"
+once_cell = "1"
 opener = "0.5"
 pulldown-cmark = { version = "0.9.1", default-features = false }
 regex = "1.5.5"
@@ -37,7 +38,6 @@ topological-sort = "0.1.0"
 
 # Watch feature
 notify = { version = "4.0", optional = true }
-ignore = { version = "0.4", optional = true }
 
 # Serve feature
 futures-util = { version = "0.3.4", optional = true }
@@ -58,7 +58,7 @@ walkdir = "2.0"
 
 [features]
 default = ["watch", "serve", "search"]
-watch = ["notify", "ignore"]
+watch = ["notify"]
 serve = ["futures-util", "tokio", "warp"]
 search = ["elasticlunr-rs", "ammonia"]
 
