--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ topological-sort = "0.1.0"
 
 # Watch feature
 notify = { version = "4.0", optional = true }
-gitignore = { version = "1.0", optional = true }
+ignore = { version = "0.4", optional = true }
 
 # Serve feature
 futures-util = { version = "0.3.4", optional = true }
@@ -58,7 +58,7 @@ walkdir = "2.0"
 
 [features]
 default = ["watch", "serve", "search"]
-watch = ["notify", "gitignore"]
+watch = ["notify", "ignore"]
 serve = ["futures-util", "tokio", "warp"]
 search = ["elasticlunr-rs", "ammonia"]
 
