--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,10 +34,10 @@ shlex = "1"
 tempfile = "3.0"
 toml = "0.5.1"
 topological-sort = "0.1.0"
+gitignore = "1.0"
 
 # Watch feature
 notify = { version = "4.0", optional = true }
-gitignore = { version = "1.0", optional = true }
 
 # Serve feature
 futures-util = { version = "0.3.4", optional = true }
@@ -58,7 +58,7 @@ walkdir = "2.0"
 
 [features]
 default = ["watch", "serve", "search"]
-watch = ["notify", "gitignore"]
+watch = ["notify"]
 serve = ["futures-util", "tokio", "warp"]
 search = ["elasticlunr-rs", "ammonia"]
 
