--- a/guide/book.toml
+++ b/guide/book.toml
@@ -8,10 +8,12 @@ language = "en"
 edition = "2018"
 
 [output.html]
-mathjax-support = true
 site-url = "/mdBook/"
 git-repository-url = "https://github.com/rust-lang/mdBook/tree/master/guide"
 edit-url-template = "https://github.com/rust-lang/mdBook/edit/master/guide/{path}"
+
+[output.html.mathjax]
+enable = true
 
 [output.html.playground]
 editable = true
