--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,8 @@ toml = "0.5.1"
 topological-sort = "0.2.2"
 
 # Watch feature
-notify = { version = "4.0", optional = true }
+notify = { version = "5.0.0", optional = true }
+notify-debouncer-mini = { version = "0.2.1", optional = true }
 gitignore = { version = "1.0", optional = true }
 
 # Serve feature
@@ -59,7 +60,7 @@ walkdir = "2.0"
 
 [features]
 default = ["watch", "serve", "search"]
-watch = ["notify", "gitignore"]
+watch = ["notify", "notify-debouncer-mini", "gitignore"]
 serve = ["futures-util", "tokio", "warp"]
 search = ["elasticlunr-rs", "ammonia"]
 
