--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ toml = "0.7.6"
 topological-sort = "0.2.2"
 
 # Watch feature
-notify = { version = "6.0.1", optional = true }
+notify = { version = "6.0.1", optional = true, features = ["macos_kqueue"] }
 notify-debouncer-mini = { version = "0.3.0", optional = true }
 ignore = { version = "0.4.20", optional = true }
 
