normalize path to relative

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ log = "0.4.17"
 memchr = "2.5.0"
 opener = "0.6.1"
 pulldown-cmark = { version = "0.9.3", default-features = false }
+pathdiff = "0.2.1"
 regex = "1.8.1"
 serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
