--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,18 @@ description = "Creates a book from markdown files"
 rust-version = "1.74"
 build = "build.rs"
 
-[build-dependencies]
-syntect = { version = "5.1.0" }
+[build-dependencies.syntect]
+version = "5.1.0"
+default-features = false
+features = [
+    # regex-onig, the default, isn't portable enough
+    "regex-fancy",
+    #"parsing",
+    "default-syntaxes",
+    "yaml-load",
+    "dump-load",
+    "dump-create",
+]
 
 [dependencies]
 anyhow = "1.0.71"
@@ -39,7 +49,6 @@ shlex = "1.3.0"
 tempfile = "3.4.0"
 toml = "0.5.11" # Do not update, see https://github.com/rust-lang/mdBook/issues/2037
 topological-sort = "0.2.2"
-syntect = { version = "5.1.0" }
 
 # Watch feature
 notify = { version = "6.1.1", optional = true }
@@ -57,6 +66,21 @@ warp = { version = "0.3.6", default-features = false, features = ["websocket"], 
 elasticlunr-rs = { version = "3.0.2", optional = true }
 ammonia = { version = "4.0.0", optional = true }
 
+[dependencies.syntect]
+version = "5.1.0"
+default-features = false
+features = [
+    # regex-onig, the default, isn't portable enough
+    "regex-fancy",
+    "parsing",
+    "html",
+    "default-themes",
+    "plist-load",
+    "yaml-load",
+    "dump-load",
+    "dump-create",
+]
+
 [dev-dependencies]
 assert_cmd = "2.0.11"
 predicates = "3.0.3"
@@ -67,7 +91,7 @@ walkdir = "2.3.3"
 
 [features]
 default = ["watch", "serve", "search", "gen-syntax-cache"]
-watch = ["dep:notify", "dep:notify-debouncer-mini", "dep:ignore"]
+watch = ["dep:notify", "dep:notify-debouncer-mini", "dep:ignore", "dep:pathdiff", "dep:walkdir"]
 serve = ["dep:futures-util", "dep:tokio", "dep:warp"]
 search = ["dep:elasticlunr-rs", "dep:ammonia"]
 gen-syntax-cache = ["syntect/dump-create"]
@@ -79,3 +103,7 @@ name = "mdbook"
 [[example]]
 name = "nop-preprocessor"
 test = true
+
+[profile.dev]
+opt-level = 1
+
