--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ clap_complete = "4.3.2"
 env_logger = "0.11.1"
 handlebars = "6.0"
 hex = "0.4.3"
+ignore = "0.4.23"
 log = "0.4.17"
 memchr = "2.5.0"
 opener = "0.8.1"
@@ -49,7 +50,6 @@ topological-sort = "0.2.2"
 # Watch feature
 notify = { version = "8.0.0", optional = true }
 notify-debouncer-mini = { version = "0.6.0", optional = true }
-ignore = { version = "0.4.20", optional = true }
 pathdiff = { version = "0.2.1", optional = true }
 walkdir = { version = "2.3.3", optional = true }
 
@@ -72,7 +72,7 @@ walkdir = "2.3.3"
 
 [features]
 default = ["watch", "serve", "search"]
-watch = ["dep:notify", "dep:notify-debouncer-mini", "dep:ignore", "dep:pathdiff", "dep:walkdir"]
+watch = ["dep:notify", "dep:notify-debouncer-mini", "dep:pathdiff", "dep:walkdir"]
 serve = ["dep:futures-util", "dep:tokio", "dep:axum", "dep:tower-http"]
 search = ["dep:elasticlunr-rs", "dep:ammonia"]
 
