--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ clap_complete = "4.3.2"
 once_cell = "1.17.1"
 env_logger = "0.11.1"
 handlebars = "6.0"
+jotdown = "0.6"
 log = "0.4.17"
 memchr = "2.5.0"
 opener = "0.7.0"
