--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ clap = { version = "4.3.12", features = ["cargo", "wrap_help"] }
 clap_complete = "4.3.2"
 once_cell = "1.17.1"
 env_logger = "0.11.1"
+font-awesome-as-a-crate = "0.3.0"
 handlebars = "6.0"
 log = "0.4.17"
 memchr = "2.5.0"
