--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,17 @@
 [workspace]
-members = [".", "examples/remove-emphasis/mdbook-remove-emphasis"]
+members = [".", "examples/remove-emphasis/mdbook-remove-emphasis", "guide"]
+
+[workspace.dependencies]
+anyhow = "1.0.71"
+clap = { version = "4.3.12", features = ["cargo", "wrap_help"] }
+mdbook = { path = "." }
+pulldown-cmark = { version = "0.12.2", default-features = false, features = [
+    "html",
+] } # Do not update, part of the public api.
+serde = { version = "1.0.163", features = ["derive"] }
+serde_json = "1.0.96"
+semver = "1.0.17"
+
 
 [package]
 name = "mdbook"
@@ -7,7 +19,7 @@ version = "0.4.43"
 authors = [
     "Mathieu David <mathieudavid@mathieudavid.org>",
     "Michael-F-Bryan <michaelfbryan@gmail.com>",
-    "Matt Ickstadt <mattico8@gmail.com>"
+    "Matt Ickstadt <mattico8@gmail.com>",
 ]
 documentation = "https://rust-lang.github.io/mdBook/index.html"
 edition = "2021"
@@ -20,23 +32,24 @@ description = "Creates a book from markdown files"
 rust-version = "1.74"
 
 [dependencies]
-anyhow = "1.0.71"
+anyhow.workspace = true
 chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
-clap = { version = "4.3.12", features = ["cargo", "wrap_help"] }
+clap.workspace = true
 clap_complete = "4.3.2"
+cargo-manifest = "0.17.0"
 once_cell = "1.17.1"
 env_logger = "0.11.1"
 handlebars = "6.0"
 log = "0.4.17"
 memchr = "2.5.0"
 opener = "0.7.0"
-pulldown-cmark = { version = "0.10.0", default-features = false, features = ["html"] } # Do not update, part of the public api.
+pulldown-cmark.workspace = true
 regex = "1.8.1"
-serde = { version = "1.0.163", features = ["derive"] }
-serde_json = "1.0.96"
+serde.workspace = true
+serde_json.workspace = true
 shlex = "1.3.0"
 tempfile = "3.4.0"
-toml = "0.5.11" # Do not update, see https://github.com/rust-lang/mdBook/issues/2037
+toml = "0.5.11"                   # Do not update, see https://github.com/rust-lang/mdBook/issues/2037
 topological-sort = "0.2.2"
 
 # Watch feature
@@ -59,7 +72,7 @@ ammonia = { version = "4.0.0", optional = true }
 assert_cmd = "2.0.11"
 predicates = "3.0.3"
 select = "0.6.0"
-semver = "1.0.17"
+semver.workspace = true
 pretty_assertions = "1.3.0"
 walkdir = "2.3.3"
 
