When running build, pull dependencies from the build of the doctest crate

--- a/guide/book.toml
+++ b/guide/book.toml
@@ -5,8 +5,8 @@ authors = ["Mathieu David", "Michael-F-Bryan"]
 language = "en"
 
 [rust]
-edition = "2018"
-package-dir = "../"
+## not needed, and will cause an error, if using Cargo.toml: edition = "2021"
+package-dir = "."
 
 [output.html]
 smart-punctuation = true
