--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,7 @@ assert_cmd = "2.0.11"
 predicates = "3.0.3"
 select = "0.6.0"
 semver = "1.0.17"
+snapbox = { version = "0.6.21", features = ["diff", "dir", "term-svg", "regex", "json"] }
 pretty_assertions = "1.3.0"
 walkdir = "2.3.3"
 
