--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ all = { level = "allow", priority = -2 }
 correctness = { level = "warn", priority = -1 }
 complexity = { level = "warn", priority = -1 }
 
+[workspace.lints.rust]
+missing_docs = "warn"
+rust_2018_idioms = "warn"
+
 [package]
 name = "mdbook"
 version = "0.4.52"
