--- a/examples/remove-emphasis/mdbook-remove-emphasis/Cargo.toml
+++ b/examples/remove-emphasis/mdbook-remove-emphasis/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mdbook-remove-emphasis"
 version = "0.1.0"
-edition = "2021"
+edition.workspace = true
 
 [dependencies]
 mdbook = { version = "0.4.40", path = "../../.." }
