--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,9 @@
 [workspace]
-members = [".", "examples/remove-emphasis/mdbook-remove-emphasis"]
+members = [
+    ".",
+    "crates/*",
+    "examples/remove-emphasis/mdbook-remove-emphasis",
+]
 
 [workspace.lints.clippy]
 all = { level = "allow", priority = -2 }
@@ -15,6 +19,9 @@ edition = "2024"
 license = "MPL-2.0"
 repository = "https://github.com/rust-lang/mdBook"
 rust-version = "1.85.0" # Keep in sync with installation.md and .github/workflows/main.yml
+
+[workspace.dependencies]
+mdbook-core = { path = "crates/mdbook-core" }
 
 [package]
 name = "mdbook"
@@ -43,6 +50,7 @@ env_logger = "0.11.1"
 handlebars = "6.0"
 hex = "0.4.3"
 log = "0.4.17"
+mdbook-core.workspace = true
 memchr = "2.5.0"
 opener = "0.8.1"
 pulldown-cmark = { version = "0.10.0", default-features = false, features = ["html"] } # Do not update, part of the public api.
