Update version to 0.5.0-alpha.1
This bumps the main crate to 0.5.0-alpha.1 in preparation for the 0.5
release.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ mdbook-core = { path = "crates/mdbook-core" }
 
 [package]
 name = "mdbook"
-version = "0.4.52"
+version = "0.5.0-alpha.1"
 authors = [
     "Mathieu David <mathieudavid@mathieudavid.org>",
     "Michael-F-Bryan <michaelfbryan@gmail.com>",
