Finish move of config to mdbook-core
This updates everything for the move of config to mdbook-core. There
will be followup commits that will be moving and refactoring the config.
This simply moves it over unchanged.

--- a/crates/mdbook-core/Cargo.toml
+++ b/crates/mdbook-core/Cargo.toml
@@ -12,6 +12,8 @@ anyhow.workspace = true
 log.workspace = true
 pulldown-cmark.workspace = true
 regex.workspace = true
+serde.workspace = true
+serde_json.workspace = true
 toml.workspace = true
 
 [dev-dependencies]
