--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ log = "0.4.27"
 mdbook-core = { path = "crates/mdbook-core" }
 pulldown-cmark = { version = "0.10.3", default-features = false, features = ["html"] } # Do not update, part of the public api.
 regex = "1.11.1"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
 tempfile = "3.20.0"
 toml = "0.5.11" # Do not update, see https://github.com/rust-lang/mdBook/issues/2037
 
@@ -61,8 +63,8 @@ memchr = "2.5.0"
 opener = "0.8.1"
 pulldown-cmark.workspace = true
 regex.workspace = true
-serde = { version = "1.0.163", features = ["derive"] }
-serde_json = "1.0.96"
+serde.workspace = true
+serde_json.workspace = true
 sha2 = "0.10.8"
 shlex = "1.3.0"
 tempfile.workspace = true
