--- a/crates/mdbook-summary/Cargo.toml
+++ b/crates/mdbook-summary/Cargo.toml
@@ -8,6 +8,11 @@ repository.workspace = true
 rust-version.workspace = true
 
 [dependencies]
+anyhow.workspace = true
+log.workspace = true
+memchr.workspace = true
+pulldown-cmark.workspace = true
+serde.workspace = true
 
 [lints]
 workspace = true
