--- a/crates/mdbook-renderer/Cargo.toml
+++ b/crates/mdbook-renderer/Cargo.toml
@@ -8,7 +8,10 @@ repository.workspace = true
 rust-version.workspace = true
 
 [dependencies]
+anyhow.workspace = true
 mdbook-core.workspace = true
+serde.workspace = true
+serde_json.workspace = true
 
 [lints]
 workspace = true
