--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 sha2 = "0.10.9"
+shlex = "1.3.0"
 tempfile = "3.20.0"
 toml = "0.5.11" # Do not update, see https://github.com/rust-lang/mdBook/issues/2037
 
@@ -70,6 +71,7 @@ clap_complete = "4.3.2"
 env_logger = "0.11.1"
 log.workspace = true
 mdbook-core.workspace = true
+mdbook-driver.workspace = true
 mdbook-html.workspace = true
 mdbook-markdown.workspace = true
 mdbook-preprocessor.workspace = true
@@ -81,7 +83,7 @@ pulldown-cmark.workspace = true
 regex.workspace = true
 serde.workspace = true
 serde_json.workspace = true
-shlex = "1.3.0"
+shlex.workspace = true
 tempfile.workspace = true
 toml.workspace = true
 topological-sort = "0.2.2"
