--- a/crates/mdbook-driver/Cargo.toml
+++ b/crates/mdbook-driver/Cargo.toml
@@ -12,6 +12,7 @@ anyhow.workspace = true
 log.workspace = true
 mdbook-core.workspace = true
 mdbook-html.workspace = true
+mdbook-markdown.workspace = true
 mdbook-preprocessor.workspace = true
 mdbook-renderer.workspace = true
 mdbook-summary.workspace = true
