--- a/triagebot.toml
+++ b/triagebot.toml
@@ -7,6 +7,9 @@
 # Closes/reopens PRs created by the GitHub Actions bot so that checks will run.
 [bot-pull-requests]
 
+# When rebasing, this will add a diff link in a comment.
+[range-diff]
+
 [relabel]
 allow-unauthenticated = [
     # For Issue areas
