--- a/crates/mdbook-html/Cargo.toml
+++ b/crates/mdbook-html/Cargo.toml
@@ -23,7 +23,7 @@ pulldown-cmark.workspace = true
 regex.workspace = true
 serde.workspace = true
 serde_json.workspace = true
-serde_yaml = { version = "0.9", optional = true }
+serde_yml = { version = "0.0.12", optional = true }
 sha2.workspace = true
 tracing.workspace = true
 
@@ -36,4 +36,4 @@ workspace = true
 
 [features]
 search = ["dep:elasticlunr-rs"]
-frontmatter = ["dep:serde_yaml"]
+frontmatter = ["dep:serde_yml"]
