feat(html): support .mdbookignore file for excluding files
Load .mdbookignore file from src directory and use it to filter files copied during the HTML build process.

--- a/crates/mdbook-html/Cargo.toml
+++ b/crates/mdbook-html/Cargo.toml
@@ -15,6 +15,7 @@ font-awesome-as-a-crate.workspace = true
 handlebars.workspace = true
 hex.workspace = true
 html5ever.workspace = true
+ignore.workspace = true
 indexmap.workspace = true
 mdbook-core.workspace = true
 mdbook-markdown.workspace = true
